# ki-arena

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/routers/: api.py  pages.py  ws.py
app/services/: debate.py  documents.py  llm.py  tts.py
app/static/css/: style.css
app/static/js/: arena.js
app/templates/: base.html  debate.html  index.html  player.html  setup.html
app/templates/partials/: debate_turn.html
