[project]
name = "ki-arena"
version = "0.1.0"
description = "KI Arena – Two LLMs debate live with TTS audio"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "edge-tts>=6.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
ki-arena = "app.main:run"
